fix double scrollbar issue

--- a/styles/all.css
+++ b/styles/all.css
@@ -169,7 +169,6 @@ footer{
   z-index: 0;
 }
 .parallax__cover {
-  overflow-x: hidden;
   background: #FEFFFF;
   display: block;
   position: absolute;
